# Sailtest

./: .gitignore  CMakeLists.txt  main.cpp
src/: newMain.cpp  sphere.cpp
src/hydrodym/: hydro_dym.h
src/navigation/: boat.cpp  boat.h  hull.cpp  hull.h  hydrosurface.h  keel.cpp  keel.h  rudder.cpp  rudder.h  sail.cpp  sail.h
src/world/: globe.cpp  globe.h  storm.cpp  storm.h  world.cpp  world.h
